--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ header {
   cursor: pointer;
 }
 
+.btn:hover {
+  background-color: white;
+  color: hsl(360, 91%, 36%);
+}
+
 button[disabled] {
   cursor: default;
   background: #c0c7cf;
